# workforce

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .npmrc  .oxlintrc.json  .prettierignore  CLAUDE.md  README.md  chat-input-playground.html  components.json  electrobun.config.ts  electron-builder.yml  eslint.config.js  forge.config.ts  greptile.json  icon.icns  index.html  node_modules  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tauri.conf.json  theme-config.html  tsconfig.electron.json  tsconfig.json  tsconfig.src-electron.json  tsdown.electron.ts  tsdown.server.ts  tsr.config.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.shared.ts  vitest.config.ts
.claude/: launch.json
.claude/hooks/: worktree-setup.sh
.codex/environments/: environment-2.toml  environment.toml
.github/workflows/: ci.yml
.sisyphus/: .gitignore  README.md  boulder.json
docs/: PRD-MVP.md  session-list-performance.md  vision.md
e2e/: chat.spec.ts  git.spec.ts  global-teardown.ts  helpers.ts  layout.spec.ts  message-segments.spec.ts  onboarding.spec.ts  projects.spec.ts  sessions.spec.ts  todos.spec.ts
scripts/: build-server-sidecar.ts  codex-app-server-poc.ts  dev-electron.sh  dev-preview.sh  e2e.sh  generate-icons.sh  link-wystack.sh  packaged-smoke.js  perf-memory.js  perf-startup.js  perf-stream.js  poc-sidecar-auth.ts  svg-to-png.mjs  test-sdk.ts
src/: electron-api.d.ts  index.css  main.tsx  tauri-api.d.ts  vite-env.d.ts
src-electron/: helpers.test.ts  helpers.ts  main.test.ts  main.ts  port-utils.ts  preload.ts
src-tauri/: Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/bun/: index.ts
tooling/: path-aliases.ts
wireframes/: artifact-panel-v2.html  artifact-panel.html  panel-layout-explorer.html  panel-layout-v3.html  panel-layout-v4.html
(+526 files in other folders)
