[package]
name = "workforce"
version = "0.1.0"
description = "Desktop agentic orchestrator"
authors = ["you"]
edition = "2021"

[lib]
name = "workforce_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
